# clab-ceis

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
clab_ceis/: app.py  ce_stage.py  ceis.py  ceis_callbacks.py  ceis_data.py  config.py  resevents.ods  shop.py  shop_callbacks.py
clab_ceis/assets/: styles.css
clab_ceis/assets/graphdb/: Dockerfile  entrypoint.sh
clab_ceis/assets/graphdb/data/: Ontology CEIS.ttl  availableAmountSpecificFabricBlock  availableAmountSpecificFabricBlock.rq  availableCroptopsAmount.rq  clab-dev-local.ttl  croptop_amount.rq  croptop_query.rq  fabricBlockOverview.rq  fabricBlocksAtLocation.rq  garment_query.rq  getAllFabricBlocks  getAllFabricBlocks.rq  getAllRecipes  getAllRecipes.rq  getRecipesForCroptop  getRecipesForCroptop.rq  getRecipesForSkirt  getRecipesForSkirt.rq  getSpecificFabricBlock  isMaterialAvailable.rq  run_query.py  skirtRecipeInformation.rq  topRecipeInformation.rq
clab_ceis/callbacks/: dashboard_callbacks.py  skirt_callbacks.py  top_callbacks.py
clab_ceis/layouts/: dashboard.py  home.py  skirt.py  top.py
clab_ceis/utils/: sparql_queries.py
clab_prototype/: ceis.py  ceis_callbacks.py  ceis_data.py  resevents.csv  resevents.ods  shop.py
heavy-scratchy-zeroeth-version/: circular-infosystem.html  shop.html
