[tool.poetry]
name = "clab-ceis"
version = "0.1.0"
description = ""
authors = ["Alessandro Giugno <alessandro.giugno@unisg.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.15.0"
pandas = "^2.2.0"
dash-cytoscape = "^1.0.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
